make pubsub with urlQueue: using virtual and system thread